Fixing overlapping heading

--- a/styles/screen.scss
+++ b/styles/screen.scss
@@ -512,7 +512,7 @@ section.full-width {
   .panel-heading a {
     display: block;
     position:relative;
-    padding: 13px 15px;
+    padding: 13px 52px 13px 15px;
     font-weight: 700;
     background: $light-grey;
     color: $body-color;
